tests/snapshots/test_sign__sign_sidecar-3.snap
---
source: tests/test_sign.rs
expression: "&ManifestStore::from_file(output_path.join(\"C.c2pa\"))?"
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "claim_generator": "make_test_images/0.6.1 c2pa-rs/0.6.1",
      "title": "C.jpg",
      "format": "image/jpeg",
      "instance_id": [XMP_ID]",
      "thumbnail": {
        "format": "image/jpeg",
        "identifier": "[JUMBF_URI]"
      },
      "ingredients": [],
      "assertions": [
        {
          "label": "stds.schema-org.CreativeWork",
          "data": {
            "@context": "http://schema.org/",
            "@type": "CreativeWork",
            "author": [
              {
                "@type": "Person",
                "name": "Gavin Peacock"
              }
            ]
          },
          "kind": "Json"
        },
        {
          "label": "c2pa.actions",
          "data": {
            "actions": [
              {
                "action": "c2pa.created"
              },
              {
                "action": "c2pa.drawing",
                "parameters": {
                  "name": "gradient"
                }
              }
            ]
          }
        }
      ],
      "signature_info": {
        "alg": "Ps256",
        "issuer": "C2PA Test Signing Cert",
        "cert_serial_number": "720724073027128164015125666832722375746636448153"
      },
      "label": "[MANIFEST_URN]"
    },
    "[MANIFEST_URN]": {
      "claim_generator": "test_app/0.0.1 c2patool/0.9.3 c2pa-rs/0.32.1",
      "claim_generator_info": [
        {
          "icon": {
            "format": "image/png",
            "identifier": "[JUMBF_URI]"
          },
          "name": "Test App",
          "version": "0.0.1"
        },
        {
          "name": "c2patool",
          "version": "0.9.3"
        },
        {
          "name": "c2pa-rs",
          "version": "0.32.1"
        }
      ],
      "format": "image/jpeg",
      "instance_id": [XMP_ID]",
      "thumbnail": {
        "format": "image/jpeg",
        "identifier": "[JUMBF_URI]"
      },
      "ingredients": [
        {
          "title": "earth_apollo17.jpg",
          "format": "image/jpeg",
          "document_id": "adobe:docid:photoshop:e1c344db-c371-ef45-a4fe-9b5ba6346544",
          "instance_id": "xmp.iid:9867c3b4-465e-42e4-8064-76c0c0fe3d16",
          "thumbnail": {
            "format": "image/jpeg",
            "identifier": "[JUMBF_URI]"
          },
          "relationship": "componentOf"
        },
        {
          "title": "C.jpg",
          "format": "image/jpeg",
          "instance_id": [XMP_ID]",
          "thumbnail": {
            "format": "image/jpeg",
            "identifier": "[JUMBF_URI]"
          },
          "relationship": "componentOf",
          "active_manifest": "[MANIFEST_URN]"
        },
        {
          "title": "test ingredient",
          "format": "image/jpeg",
          "instance_id": [XMP_ID]",
          "thumbnail": {
            "format": "image/png",
            "identifier": "[JUMBF_URI]"
          },
          "relationship": "componentOf"
        },
        {
          "title": "C.jpg",
          "format": "image/jpeg",
          "instance_id": [XMP_ID]",
          "thumbnail": {
            "format": "image/jpeg",
            "identifier": "[JUMBF_URI]"
          },
          "relationship": "parentOf",
          "active_manifest": "[MANIFEST_URN]"
        }
      ],
      "assertions": [
        {
          "label": "c2pa.actions.v2",
          "data": {
            "actions": [
              {
                "action": "c2pa.created",
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/algorithmicMedia",
                "instanceId": "xmp.iid:7b57930e-2f23-47fc-affe-0400d70b738d",
                "softwareAgent": {
                  "name": "TestApp",
                  "something": "else",
                  "version": "1.0"
                }
              },
              {
                "action": "c2pa.opened",
                "changes": [
                  {
                    "description": "lip synced area",
                    "region": [
                      {
                        "time": {},
                        "type": "temporal"
                      },
                      {
                        "item": {
                          "identifier": "https://bioportal.bioontology.org/ontologies/FMA",
                          "value": "lips"
                        },
                        "type": "identified"
                      }
                    ]
                  }
                ],
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/algorithmicMedia",
                "instanceId": "xmp.iid:7b57930e-2f23-47fc-affe-0400d70b738d",
                "parameters": {
                  "description": "import"
                },
                "softwareAgent": {
                  "icon": {
                    "format": "image/svg+xml",
                    "identifier": "[JUMBF_URI]"
                  },
                  "name": "TestApp",
                  "something": "else",
                  "version": "1.0"
                }
              },
              {
                "action": "c2pa.edited",
                "changes": [
                  {
                    "region": [
                      {
                        "item": {
                          "identifier": "track_id",
                          "value": "transcript"
                        },
                        "type": "identified"
                      }
                    ]
                  }
                ],
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/minorHumanEdits"
              }
            ]
          }
        },
        {
          "label": "stds.schema-org.CreativeWork",
          "data": {
            "@context": "https://schema.org",
            "@type": "CreativeWork",
            "author": [
              {
                "@type": "Person",
                "name": "Joe Bloggs"
              }
            ]
          },
          "kind": "Json"
        },
        {
          "label": "cawg.training-mining",
          "data": {
            "entries": {
              "c2pa.ai_generative_training": {
                "use": "notAllowed"
              },
              "c2pa.ai_training": {
                "use": "allowed"
              }
            }
          }
        }
      ],
      "signature_info": {
        "alg": "Es256",
        "issuer": "C2PA Test Signing Cert",
        "cert_serial_number": "640229841392226413189608867977836244731148734950",
        "time": "[TIMESTAMP1]"
      },
      "label": "[MANIFEST_URN]"
    }
  },
  "validation_status": [
    {
      "code": "assertion.dataHash.mismatch",
      "url": "[JUMBF_URI]",
      "explanation": "asset hash error, name: jumbf manifest, error: hash verification( Hashes do not match )"
    }
  ]
}
